# youngho-agent

./: .gitignore  Dockerfile  OPENSEARCH-EXPLANATION.md  PROJECT-GUIDE.md  README.md  SETUP-GUIDE.md  docker-compose.yml  opensearch-setup.sh
mcp-server/: auto_vector_db.py  config.py  employee_data.py  google_drive.py  main.py  pdf_processor.py  pyproject.toml  requirements.txt  settings.py  vector_db.py
mcp-server/core/: __init__.py  config.py  exceptions.py  logger.py
mcp-server/services/: __init__.py  document_service.py  employee_service.py  search_service.py  vector_service.py
